fixed z-index for footer

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -151,7 +151,7 @@ font-size: 14px;
     background-color: white;
     box-shadow: 1px 1px 6px -3px black;
     position: relative;
-z-index: 500  ;
+z-index: 59  ;
     .container {
       gap: 30px;
       display: grid;
