--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -135,7 +135,7 @@ html {
 .flat {
   position: fixed;
   top: 50%;
-  z-index: 110;
+  z-index: 56;
   height: fit-content;
   background: #a30e22;
   backdrop-filter: blur(2px);
